# qiskit-qward

./: .buildinfo  .dockerignore  .env.example  .envrc  .gitignore  .gitmodules  .pylintrc  .travis.yml  .windsurfrules  AGENTS.md  CHANGELOG.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  Dockerfile.qward  MANIFEST.in  README.html  README.md  agent-workflow-diagram.html  architecture.html  beginners_guide.html  developer_guide.html  docker-compose.yml  ecosystem.json  file-map-and-description.html  genindex.html  index.html  matrix_product_verification_guide.html  mypy.ini  objects.inv  presentation.js  project_overview.html  py-modindex.html  pyproject.toml  quickstart_guide.html  requirements.ai.txt  requirements.docs.txt  requirements.qward.txt  requirements.txt  (+10 more)
.claude/: workflows
.cursor/rules/: qward.mdc
.doctrees/: CHANGELOG.doctree  README.doctree  agent-workflow-diagram.doctree  architecture.doctree  beginners_guide.doctree  developer_guide.doctree  environment.pickle  file-map-and-description.doctree  index.doctree  matrix_product_verification_guide.doctree  project_overview.doctree  quickstart_guide.doctree  technical_docs.doctree  thesis-dataset-plan.doctree  visualization_guide.doctree  zenodo-integration.doctree
.doctrees/apidocs/: analysis.doctree  index.doctree  metrics_base.doctree  metrics_behavioral.doctree  metrics_circuit_performance.doctree  metrics_complexity.doctree  metrics_element.doctree  metrics_qiskit.doctree  metrics_quantum_specific.doctree  result.doctree  (+12 more)
_modules/: index.html
_sources/: CHANGELOG.md.txt  agent-workflow-diagram.md.txt  architecture.md.txt  beginners_guide.md.txt  developer_guide.md.txt  index.rst.txt  matrix_product_verification_guide.md.txt  project_overview.md.txt  quickstart_guide.md.txt  technical_docs.md.txt  visualization_guide.md.txt
_static/: mermaid-init.js
agents/: introduction-editor.md  python-architect.md  quantum-computing-researcher.md  quantum-data-scientist.md  quantum-research-lead.md  technical-writer.md  test-engineer.md
apidocs/: analysis.html  index.html  metrics_base.html  metrics_behavioral.html  metrics_circuit_performance.html  metrics_complexity.html  metrics_element.html  metrics_qiskit.html  metrics_quantum_specific.html  metrics_schemas.html  metrics_structural.html  metrics_success_rate.html  metrics_utils.html  quantum_circuits.html  result.html  runtime.html  scanner.html  template.html  validators.html  visualization_base.html  visualization_strategies.html  visualization_unified.html
docs/: CHANGELOG.md  architecture.md  beginners_guide.md  conf.py  index.rst  project_overview.md  quickstart_guide.md  technical_docs.md  thesis-dataset-plan.md  visualization_guide.md
how_tos/: example_how_to.html  example_how_to.ipynb  index.html
papers/: p.html
qiskit_qward/: README.md  __init__.py  docker-compose.yml  example.py  scanning_quantum_circuit.py
qward/: __init__.py  result.py  scanner.py  version.py
skills/: manimce-best-practices
stubs/: qiskit_qward.analysis.Analysis.html  qiskit_qward.analysis.SuccessRate.html  qiskit_qward.validators.BaseValidator.html  qiskit_qward.validators.FlipCoinValidator.html  qiskit_qward.validators.TeleportationValidator.html
tests/: README.md  conftest.py  test_behavioral_metrics.py  test_circuit_performance_metrics.py  test_complexity_metrics.py  test_differential_success_rate.py  test_eigensolver.py  test_element_metrics.py  test_estimator_metrics.py  test_fidelity_metrics.py  test_integration.py  test_matrix_product_verification_algorithm.py  test_qiskit_metrics.py  test_quantum_specific_metrics.py  test_scan.py  test_scan_job_estimator.py  test_scanner.py  test_schemas.py  test_structural_metrics.py  test_template_class.py  test_validator.py  test_visualization_api.py
tutorials/: example_tutorial.html  example_tutorial.ipynb  index.html
workflows/: collaborative-development.md
(+1713 files in other folders)
